tests/baselines/reference/identifierBracesUnicodeEscapeSequenceErrors.errors.txt
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(1,7): error TS2451: Cannot redeclare block-scoped variable 'n'.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(2,7): error TS2451: Cannot redeclare block-scoped variable '\u{6e}'.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(4,7): error TS1134: Variable declaration expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(4,8): error TS2451: Cannot redeclare block-scoped variable 'u'.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(4,9): error TS1005: '=' expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(4,12): error TS1005: ':' expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(4,13): error TS1127: Invalid character.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(5,7): error TS2451: Cannot redeclare block-scoped variable 'abcde'.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(5,12): error TS1005: ',' expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(5,13): error TS2451: Cannot redeclare block-scoped variable 'u'.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(5,14): error TS1005: '=' expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(5,17): error TS1005: ':' expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(5,18): error TS1127: Invalid character.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(6,7): error TS2451: Cannot redeclare block-scoped variable 'abcde'.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(6,12): error TS1005: ',' expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(6,13): error TS2451: Cannot redeclare block-scoped variable 'u'.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(6,14): error TS1005: '=' expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(6,17): error TS1005: ':' expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(6,18): error TS1127: Invalid character.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(6,18): error TS1005: ',' expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(9,11): error TS1005: ',' expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(9,12): error TS2451: Cannot redeclare block-scoped variable 'u'.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(9,13): error TS1005: '=' expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(9,14): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(9,14): error TS2304: Cannot find name 'NOTHEX'.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(9,14): error TS2459: Type '" "' has no property 'NOTHEX' and no string index signature.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(10,7): error TS1134: Variable declaration expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(10,8): error TS2451: Cannot redeclare block-scoped variable 'u'.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(10,9): error TS1005: '=' expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(10,10): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(10,10): error TS2304: Cannot find name 'NOTHEX'.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(10,10): error TS2459: Type '" "' has no property 'NOTHEX' and no string index signature.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(12,7): error TS1134: Variable declaration expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(12,8): error TS2451: Cannot redeclare block-scoped variable 'u'.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(12,9): error TS1005: '=' expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(12,10): error TS2304: Cannot find name 'f1'.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(12,12): error TS1199: Unterminated Unicode escape sequence.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(12,23): error TS1005: ',' expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(14,7): error TS1005: ':' expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(14,9): error TS1005: ':' expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(14,10): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(14,11): error TS1127: Invalid character.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(14,17): error TS1005: ',' expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(17,1): error TS1136: Property assignment expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(17,3): error TS1005: ';' expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(17,4): error TS2304: Cannot find name 'f1'.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(17,6): error TS1199: Unterminated Unicode escape sequence.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(21,1): error TS2554: Expected 1 arguments, but got 4.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(21,5): error TS1135: Argument expression expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(21,7): error TS1005: ',' expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(21,10): error TS1005: ':' expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(21,11): error TS1127: Invalid character.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(21,11): error TS1005: ',' expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(21,13): error TS1005: ',' expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(21,17): error TS1199: Unterminated Unicode escape sequence.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(21,17): error TS1005: ':' expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(21,17): error TS2304: Cannot find name '_and_more'.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(21,26): error TS1005: ',' expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(22,1): error TS2554: Expected 1 arguments, but got 6.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(22,5): error TS2304: Cannot find name 'long_'.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(22,10): error TS1005: ',' expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(22,12): error TS1005: ',' expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(22,15): error TS1005: ':' expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(22,16): error TS1127: Invalid character.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(22,16): error TS1005: ',' expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(22,16): error TS2304: Cannot find name '_wrong_'.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(22,23): error TS1005: ',' expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(22,25): error TS1005: ',' expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(22,29): error TS1199: Unterminated Unicode escape sequence.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(22,29): error TS1005: ':' expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(22,29): error TS2304: Cannot find name '_identifier'.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(22,40): error TS1005: ',' expected.
tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts(23,1): error TS1005: '}' expected.


==== tests/cases/compiler/identifierBracesUnicodeEscapeSequenceErrors.ts (73 errors) ====
    const n = 1;
          ~
!!! error TS2451: Cannot redeclare block-scoped variable 'n'.
    const \u{6e} = 2; // 6e is also n
          ~~~~~~
!!! error TS2451: Cannot redeclare block-scoped variable '\u{6e}'.
    
    const \u{20} = " "; // a space isn't a valid identifier, even if escaped
          ~
!!! error TS1134: Variable declaration expected.
           ~
!!! error TS2451: Cannot redeclare block-scoped variable 'u'.
            ~
!!! error TS1005: '=' expected.
               ~
!!! error TS1005: ':' expected.
                
!!! error TS1127: Invalid character.
    const abcde\u{20} = " ";
          ~~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'abcde'.
               ~
!!! error TS1005: ',' expected.
                ~
!!! error TS2451: Cannot redeclare block-scoped variable 'u'.
                 ~
!!! error TS1005: '=' expected.
                    ~
!!! error TS1005: ':' expected.
                     
!!! error TS1127: Invalid character.
    const abcde\u{20}space = " ";
          ~~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'abcde'.
               ~
!!! error TS1005: ',' expected.
                ~
!!! error TS2451: Cannot redeclare block-scoped variable 'u'.
                 ~
!!! error TS1005: '=' expected.
                    ~
!!! error TS1005: ':' expected.
                     
!!! error TS1127: Invalid character.
                     ~~~~~
!!! error TS1005: ',' expected.
    
    
    const abcd\u{NOTHEX} = " ";
              ~
!!! error TS1005: ',' expected.
               ~
!!! error TS2451: Cannot redeclare block-scoped variable 'u'.
                ~
!!! error TS1005: '=' expected.
                 
!!! error TS1125: Hexadecimal digit expected.
                 ~~~~~~
!!! error TS2304: Cannot find name 'NOTHEX'.
                 ~~~~~~
!!! error TS2459: Type '" "' has no property 'NOTHEX' and no string index signature.
    const \u{NOTHEX} = " ";
          ~
!!! error TS1134: Variable declaration expected.
           ~
!!! error TS2451: Cannot redeclare block-scoped variable 'u'.
            ~
!!! error TS1005: '=' expected.
             
!!! error TS1125: Hexadecimal digit expected.
             ~~~~~~
!!! error TS2304: Cannot find name 'NOTHEX'.
             ~~~~~~
!!! error TS2459: Type '" "' has no property 'NOTHEX' and no string index signature.
    
    const \u{f1 = "\u{f1}"; // missing closing brace
          ~
!!! error TS1134: Variable declaration expected.
           ~
!!! error TS2451: Cannot redeclare block-scoped variable 'u'.
            ~
!!! error TS1005: '=' expected.
             ~~
!!! error TS2304: Cannot find name 'f1'.
               
!!! error TS1199: Unterminated Unicode escape sequence.
                          ~
!!! error TS1005: ',' expected.
    
    const \u{} = "l"; // 
          ~
!!! error TS1005: ':' expected.
            ~
!!! error TS1005: ':' expected.
             
!!! error TS1125: Hexadecimal digit expected.
              
!!! error TS1127: Invalid character.
                    ~
!!! error TS1005: ',' expected.
    
    // usage as object
    \u{f1.toUpperCase();
    ~
!!! error TS1136: Property assignment expected.
      ~
!!! error TS1005: ';' expected.
       ~~
!!! error TS2304: Cannot find name 'f1'.
         
!!! error TS1199: Unterminated Unicode escape sequence.
    
    // usage as passed value
    declare function foo(s: string): void;
    foo(\u{20}\u{303_and_more); // space and unclosed escape sequence
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2554: Expected 1 arguments, but got 4.
        ~
!!! error TS1135: Argument expression expected.
          ~
!!! error TS1005: ',' expected.
             ~
!!! error TS1005: ':' expected.
              
!!! error TS1127: Invalid character.
              ~
!!! error TS1005: ',' expected.
                ~
!!! error TS1005: ',' expected.
                    
!!! error TS1199: Unterminated Unicode escape sequence.
                    ~~~~~~~~~
!!! error TS1005: ':' expected.
                    ~~~~~~~~~
!!! error TS2304: Cannot find name '_and_more'.
                             ~
!!! error TS1005: ',' expected.
    foo(long_\u{20}_wrong_\u{303_identifier);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2554: Expected 1 arguments, but got 6.
        ~~~~~
!!! error TS2304: Cannot find name 'long_'.
             ~
!!! error TS1005: ',' expected.
               ~
!!! error TS1005: ',' expected.
                  ~
!!! error TS1005: ':' expected.
                   
!!! error TS1127: Invalid character.
                   ~~~~~~~
!!! error TS1005: ',' expected.
                   ~~~~~~~
!!! error TS2304: Cannot find name '_wrong_'.
                          ~
!!! error TS1005: ',' expected.
                            ~
!!! error TS1005: ',' expected.
                                
!!! error TS1199: Unterminated Unicode escape sequence.
                                ~~~~~~~~~~~
!!! error TS1005: ':' expected.
                                ~~~~~~~~~~~
!!! error TS2304: Cannot find name '_identifier'.
                                           ~
!!! error TS1005: ',' expected.
    
    
!!! error TS1005: '}' expected.